Fresh Slate for 3D

--- a/public/index.html
+++ b/public/index.html
@@ -1,58 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charSet="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="NFT Wearable Decenteralized Project"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <head>
+		
+		<meta charset="utf-8">
+        <meta http-equiv="Content-type" content="text/html;charSet=UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	    <title>Golden Boy NFT</title>
+	</head>
 
 
-
-
-
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<body>
  
-
-
-
-
-
-
-    <title>Golden Boy NFT</title>
-
-    <script type="module">
-      import three from 'https://cdn.skypack.dev/three';
-      import threejsOrbitControls from 'https://cdn.skypack.dev/threejs-orbit-controls';
-      import threeGltfLoader from 'https://cdn.skypack.dev/three-gltf-loader';
-    </script>
-
-
-  </head>
-
-
-
-
-  <body>
-
-    <div className="canvas-element">
-      <canvas className="webgl"></canvas>
-  </div>
-
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="text/html" src="../src/App.js"></script>
-    <div id="root"></div>
-
-
-
-
+    
+<div id="root"></div>
    
+</body>
 
 
-  </body>
+
+
 </html>
