--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <meta http-equiv="Content-type" content="text/html;charSet=UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	    <title>Golden Boy NFT</title>
+		
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</head>
 	<script>
 
